# modular-robotics

./: CMakeLists.txt  GUI.js  README.md  index.html  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
3DTiler/: Index.html
3DTiler/src/: 2dScreen.js  sketch.js
MRWT/: Index.html  styles.css
MRWT/Scenarios/: 3x3 Metamodule.scen
MRWT/pathfinder/: Makefile  Pathfinder.js  Pathfinder.wasm  README.md  webmain.cpp
MRWT/src/grid/: grid.js
MRWT/src/webvis/: GUI.js  ModuleMaterials.js  Move.js  MoveSetSequence.js  Scenario.js  User.js  main.js
MRWT/svgpainter/: svgtiler.js
Module Properties/: ColorProperty.json  OrientationProperty.json
Moves-Disabled/: Catom.json
WebVis/: index.html
WebVis/Scenarios/: 3x3 Metamodule.scen  Catom Debugging.scen  Cube Debugging.scen  Multiple Models.scen  RD Debugging.scen  Slide Debugging.scen  socg2025-2piv+slide.scen
WebVis/pathfinder/: Makefile  Pathfinder.js  Pathfinder.wasm  webmain.cpp
WebVis/src/: GUI.js  Module.js  ModuleGeometries.js  ModuleMaterials.js  Move.js  MoveSet.js  MoveSetSequence.js  Pathfinder.js  Pathfinder.wasm  PathfinderWorker.js  Scenario.js  User.js  main.js  utils.js
pathfinder/: main.cpp
pathfinder/coordtensor/: CoordTensor.h
pathfinder/lattice/: Lattice.cpp  Lattice.h  LatticeSetup.cpp  LatticeSetup.h
pathfinder/modules/: ModuleManager.cpp  ModuleManager.h  ModuleProperties.cpp  ModuleProperties.h
pathfinder/moves/: MoveManager.cpp  MoveManager.h  Scenario.cpp  Scenario.h
pathfinder/properties/: Colors.cpp  Colors.h
pathfinder/search/: ConfigurationSpace.cpp  ConfigurationSpace.h  HeuristicCache.cpp  HeuristicCache.h  SearchAnalysis.cpp
pathfinder/utility/: color_util.cpp  color_util.h
